syntax = "proto3";

package stacks.signer.v1;

import "stacks/common.proto";

// An identifier for a withdrawal request, comprised of the Stacks
// transaction ID, the Stacks block ID that included the transaction, and
// the request-id generated by the clarity contract for the withdrawal
// request.
message QualifiedRequestId {
  // The ID that was generated in the clarity contract call for the
  // withdrawal request.
  uint64 request_id = 1;
  // The txid that generated the request.
  stacks.StacksTxid txid = 2;
  // The Stacks block ID that includes the transaction that generated
  // the request.
  stacks.StacksBlockId block_hash = 3;
}

// Describes the fees for a transaction.
message Fees {
  // The total fee paid in sats for the transaction.
  uint64 total = 1;
  // The fee rate paid in sats per virtual byte.
  double rate = 2;
}
